--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,17 @@
 body{
 	font-family: 'Montserrat', sans-serif;
 	text-align: center;
-	background-color: #f3f4e6;
-	color: #ffffff;
-	background-image: url(./img/Linen-Background.jpg);
+	background-color: #fff;
+	color: #5e5b52;
+	/*background-image: url(./img/Linen-Background.jpg);*/
 }
 
 /*div{
 	margin-top: 50px;
 }*/
 
-h2, h3 {
-	color: #ffac41;
+h1,h2, h3 {
+	color: #5e5b52;
 	font-size: 25px;
 }
 
@@ -22,7 +22,7 @@ h4 {
 a{
 	font-family: 'Montserrat', sans-serif;
 	/*color: #FBD8C5;*/
-	color: #886d42;
+	color: #5e5b52;
 	text-decoration: none;
 	font-size: 30px;
 }
@@ -30,21 +30,21 @@ a{
 #choices img {
 	height: 150px;
 	width: 150px;
-	border: solid 5px #886d42;
+	border: solid 5px #5e5b52;
 	border-radius: 100%;
 }
 
 #choices img:hover{
 	height: 250px;
 	width: 250px;
-	border: solid 10px #886d42;
+	border: solid 10px #5e5b52;
 	border-radius: 100%;
 }
 
 #randomchoices img {
 	height: 250px;
 	width: 250px;
-	border: solid 10px #886d42;
+	border: solid 10px #5e5b52;
 	border-radius: 100%;
 }
 
@@ -61,7 +61,7 @@ a{
 }
 
 .btn.btn-link {
-	background-color: #17bebb;
+ background-color: #17bebb;
  border: none;
  color: white;
  padding: 15px 15px;
@@ -93,7 +93,7 @@ ul {
 
 .header{
 	/*background: #7ab4a6;*/
-  background: #f1dbbd;
+  background: #628395;
 }
 
 h1.appName{
@@ -106,6 +106,7 @@ h1.appName{
 .headerLinks{
 	float: right;
 	font-family: 'Lemon', cursive;
+	margin-top: 50px;
 }
 
 ul.headerLinks li {
@@ -113,14 +114,23 @@ ul.headerLinks li {
   margin-right: 50px;
 }
 
+ul.headerLinks li a{
+	  color: #fff !important;
+}
+
+
 ul.headerLinks a:hover, a:default, a:active, a:link {
 	text-decoration: none;
 }
 
 .active, ul.headerLinks a:focus {
-	color: black;
+	color: white;
 	text-decoration: none;
-	font-family: 'Croissant One',fantasy;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: bold;
+	background-color: #ffac41;
+	padding: 5px;
+	border-radius: 12px;
 	font-weight: bold;
 }
 
@@ -128,7 +138,7 @@ ul.headerLinks a:hover, a:default, a:active, a:link {
 	float: right;
 	color: #000000;
 }
- 
+
 .venueList {
 	text-align: left;
 }
@@ -151,4 +161,13 @@ footer{
  height: 500px;
  width: 630px;
  float: left;
+}
+
+#choiceButton {
+	margin-bottom: 11px;
+	background-color: #ffac41 !important;
+	border-color: #17bebb !important;
+	color: #ffffff !important;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: bold;
 }
